--- a/.npmrc
+++ b/.npmrc
@@ -1,1 +1,2 @@
-registry=https://npm.pkg.github.com/onikakimasiaod
+registry.npmjs.org/:_authToken=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
+npm.pkg.github.com/:_authToken=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
