update.package,json

--- a/package.json
+++ b/package.json
@@ -3,11 +3,14 @@
   "version": "0.0.0",
   "scripts": {
     "ng": "ng",
-    "start": "set NODE_OPTIONS=--openssl-legacy-provider && ng serve -o",
-    "build": "set NODE_OPTIONS=--openssl-legacy-provider && ng build",
+    "start": "ng serve",
+    "build": "ng build",
     "test": "ng test",
     "lint": "ng lint",
     "e2e": "ng e2e"
+  },
+  "engines": {
+    "node": "16.x"
   },
   "private": true,
   "dependencies": {
